Found quick fix for gap at bottom of page after excessive resizing

--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -1,13 +1,13 @@
-html {
+html, body {
     background-color: #000000;
-    height: 100%;
+    min-height: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 body {
     margin: 0;
     padding: 0;
-    min-height: 100%;
-    background: #000000; /* fallback for old browsers */
     background: -webkit-linear-gradient(
         to bottom,
         #000000 70%,
